fixed nav with z-index , disappears behind footer

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,6 +1,8 @@
 @import "../../styles.scss";
 
 footer {
+  position: relative;
+  z-index: 10;
   // padding: 30px 0;
   margin-top: 4rem;
   height: 30vh;
