--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -34,6 +34,10 @@ nav {
   }
 }
 
+.hide {
+  display: none;
+}
+
 @media only screen and (max-width: 400px) {
   nav {
     bottom: 0;
